; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers/ozone/extr_ozone_display.c_ozone_draw_text.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers/ozone/extr_ozone_display.c_ozone_draw_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ozone_draw_text(i32* %0, i32* %1, i8* %2, float %3, float %4, i32 %5, i32 %6, i32 %7, i32* %8, i32 %9, i32 %10) #0 {
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca float, align 4
  %16 = alloca float, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i32* %0, i32** %12, align 8
  store i32* %1, i32** %13, align 8
  store i8* %2, i8** %14, align 8
  store float %3, float* %15, align 4
  store float %4, float* %16, align 4
  store i32 %5, i32* %17, align 4
  store i32 %6, i32* %18, align 4
  store i32 %7, i32* %19, align 4
  store i32* %8, i32** %20, align 8
  store i32 %9, i32* %21, align 4
  store i32 %10, i32* %22, align 4
  %23 = load i32*, i32** %20, align 8
  %24 = load i8*, i8** %14, align 8
  %25 = load float, float* %15, align 4
  %26 = load float, float* %16, align 4
  %27 = load i32, i32* %18, align 4
  %28 = load i32, i32* %19, align 4
  %29 = load i32, i32* %21, align 4
  %30 = load i32, i32* %17, align 4
  %31 = load i32, i32* %22, align 4
  %32 = call i32 @menu_display_draw_text(i32* %23, i8* %24, float %25, float %26, i32 %27, i32 %28, i32 %29, i32 %30, float 1.000000e+00, i32 0, double 1.000000e+00, i32 %31)
  ret void
}

declare dso_local i32 @menu_display_draw_text(i32*, i8*, float, float, i32, i32, i32, i32, float, i32, double, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
